Add id to h1 element

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="webpage">
         <div id="left-side">
-            <h1>Odin</h1>
+            <h1 id="title">Odin</h1>
         </div>
         <div id="right-side">
             <p>This is not a real online service! You know you need something like this in your life to help you realize your
