--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
     <div id="webpage">
         <div id="left-side">
+            <div id="title-background">
             <h1 id="title">Odin</h1>
+            </div>
         </div>
         <div id="right-side">
             <p>This is not a real online service! You know you need something like this in your life to help you realize your
