Add odin logo image

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div id="webpage">
         <div id="left-side">
             <div id="title-background">
+                <img id="logo" src="../pictures/odin-logo.png" alt="Odin Project logo">
                 <h1 id="title">Odin</h1>
             </div>
         </div>
