Add copyright text

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
                 <img id="logo" src="../pictures/odin-logo.png" alt="Odin Project logo">
                 <h1 id="title">Odin</h1>
             </div>
+            <footer>
+                <p id="copyright">Photo by <u>Halie West</u> on <u>Unsplash</u></p>
+            </footer>
         </div>
         <div id="right-side">
             <p>This is not a real online service! You know you need something like this in your life to help you realize your
