--- a/index.html
+++ b/index.html
@@ -19,27 +19,9 @@
             </footer>
         </div>
         <div id="right-side">
-            <p>This is not a real online service! You know you need something like this in your life to help you realize your
-                deepest dreams. Sign up <em>now</em> to get started.
-            </p>
-            <p>You <em>know</em> you want to.</p>
-            <h2>Let's do this!</h2>
-            <form method="post" action="https://httpbin.org/post">
-                <label for="first-name">FIRST NAME</label>
-                <input type="text" id="first-name" name="first-name" required>
-                <label for="last-name">LAST NAME</label>
-                <input type="text" id="last-name" name="last-name" required>
-                <label for="email">EMAIL</label>
-                <input type="email" id="email" name="email" required>
-                <label for="phone-number">PHONE NUMBER</label>
-                <input type="tel" id="phone-number" name="phone-number" required>
-                <label for="password">PASSWORD</label>
-                <input type="password" id="password" name="password" required>
-                <label for="password">CONFIRM PASSWORD</label>
-                <input type="password" id="confirm-password" required>
-                <button type="submit" id="submit">Create Account</button>
-            </form>
-            <p>Already have an account? Log in</p>
+                <p id="paragraph" class="text">This is not a real online service! You know you need something <br> like this in your life to help you realize your
+                    deepest dreams. <br> Sign up <em>now</em> to get started.</p>
+                <p class="text">You <em>know</em> you want to.</p>
         </div>   
     </div> 
         <script src="index.js"></script>
