--- a/index.html
+++ b/index.html
@@ -27,18 +27,22 @@
             <div id="middle">
                 <h2>Let's do this!</h2>
                 <form id="form" method="post" action="https://httpbin.org/post">
-                    <label for="first-name">FIRST NAME</label>
-                    <input type="text" id="first-name" name="first-name" required>
-                    <label for="last-name">LAST NAME</label>
-                    <input type="text" id="last-name" name="last-name" required>
-                    <label for="email">EMAIL</label>
-                    <input type="email" id="email" name="email" required>
-                    <label for="phone-number">PHONE NUMBER</label>
-                    <input type="tel" id="phone-number" name="phone-number" required>
-                    <label for="password">PASSWORD</label>
-                    <input type="password" id="password" name="password" required>
-                    <label for="password">CONFIRM PASSWORD</label>
-                    <input type="password" id="confirm-password" required>
+                    <div id="left-inputs">
+                        <label for="first-name">FIRST NAME</label>
+                        <input type="text" id="first-name" name="first-name" required>
+                        <label for="email">EMAIL</label>
+                        <input type="email" id="email" name="email" required>
+                        <label for="password">PASSWORD</label>
+                        <input type="password" id="password" name="password" required> 
+                    </div>
+                    <div id="right-inputs"> 
+                        <label for="last-name">LAST NAME</label>
+                        <input type="text" id="last-name" name="last-name" required>   
+                        <label for="phone-number">PHONE NUMBER</label>
+                        <input type="tel" id="phone-number" name="phone-number" required>
+                        <label for="password">CONFIRM PASSWORD</label>
+                        <input type="password" id="confirm-password" required>
+                    </div>    
                 </form>
             </div>
             <div id="bottom">    
