Style footer text

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
             <div id="bottom">    
                 <button type="submit" form="form" id="submit">Create Account</button>
-                <p>Already have an account? Log in</p>
+                <p id="footer-text">Already have an account? <em>Log in</em></p>
             </div>    
         </div>   
     </div> 
